# typest

./: .gitignore  Makefile  README.md  pyproject.toml
tests/: case.py  test_fake_type.py  test_test.py
tests/cases/: empty_case.py  failing_case.py  passing_case.py
tests/outcomes/: test_mismatch.py
typest/: __main__.py  error.py  outcome.py  test.py  typy.py
typest/outcomes/: __init__.py  base.py  flaw.py  mismatch.py  revealed_type.py
typest/typecheckers/: __init__.py  base.py  mypy.py  pyright.py
typest/utils/: color.py  fake_type.py
