[tool.pyright]
venv = ".venv"

[tool.poetry]
name = "typest"
version = "0.2.0"
description = "A framework for testing type expectations"
authors = ["Jonathan Scholbach <j.scholbach@posteo.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jonathan-scholbach/typest"
repository = "https://github.com/jonathan-scholbach/typest"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.991"
comment-parser = "^1.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
